# mkdocstrings-crossref-fieldname-bug

./: README.md  mkdocs.yml  pyproject.toml
docs/: 1_working_example.md  2_broken_example.md  3_mixed_examples.md  index.md  tag.md
fieldname_bug_example/: BrokenExample.py  MixedExamples.py  Tag.py  WorkingExample.py
