[project]
name = "mkdocstrings-crossref-fieldname-bug"
version = "0.1"
description = "A sample Python project"
requires-python = ">=3.9"
dependencies = [
  "mkdocs==1.6.1",
  "mkdocs-material==9.5.43",
  "mkdocs-material-extensions==1.3.1",
#  "mkdocstrings==0.26.2",
#  "mkdocstrings-python==1.12.2",
]
